--- a/src/style.css
+++ b/src/style.css
@@ -184,7 +184,7 @@ h6 {
 }
 
 .pagetitle h1 {
-  font-size: 24px;
+  font-size: 18px;
   margin-bottom: 0;
   font-weight: 600;
   color: #012970;
@@ -391,9 +391,8 @@ h6 {
 .card-title {
   padding: 20px 0 15px 0;
   font-size: 18px;
-  font-weight: 500;
+  font-weight: 700;
   color: #012970;
-  font-family: "Poppins", sans-serif;
 }
 
 .card-title span {
@@ -402,9 +401,9 @@ h6 {
   font-weight: 400;
 }
 
-.card-body {
+/* .card-body {
   padding: 0 20px 20px 20px;
-}
+} */
 
 .card-img-overlay {
   background-color: rgba(255, 255, 255, 0.6);
@@ -915,7 +914,7 @@ h6 {
   align-items: center;
   font-size: 0.77rem;
   font-weight: 600;
-  color: #ffffffb3;
+  color: #ffffff;
   padding: 0.825rem 0rem;
   padding-left: 1.25rem;
 }
@@ -1358,10 +1357,29 @@ font-weight: 600;
 .inputpicker-wrapped-list .table{
   font-size: calc(0.75rem) !important; 
 }
-/* .was-validated .form-control:valid,.was-validated .form-select:valid,
-.was-validated .form-select:valid:not([multiple]):not([size]){
+.was-validated .form-control:valid,.was-validated .form-select:valid,
+.was-validated .form-select:valid:not([multiple]):not([size]),.was-validated .form-check-input:valid~.form-check-label,
+.was-validated .form-check-input.is-valid:checked, .was-validated .form-check-input:valid:checked,.was-validated .form-check-input:valid{
   border-color:#ced4da;
   background-image: none;
   background-color: inherit;
   color: inherit;
-} */
+}
+.was-validated .form-check-input.is-valid:checked, .was-validated .form-check-input:valid:checked{
+  border-color:#0d6efd;
+  background-color: #0d6efd;
+  background-image: url("data:image/svg+xml,%3csvg xmlns=%27http://www.w3.org/2000/svg%27 viewBox=%27-4 -4 8 8%27%3e%3ccircle r=%272%27 fill=%27%23fff%27/%3e%3c/svg%3e");
+}
+.was-validated .form-check-input:valid:checked{
+background-image:url("data:image/svg+xml,%3csvg xmlns=%27http://www.w3.org/2000/svg%27 viewBox=%270 0 20 20%27%3e%3cpath fill=%27none%27 stroke=%27%23fff%27 stroke-linecap=%27round%27 stroke-linejoin=%27round%27 stroke-width=%273%27 d=%27m6 10 3 3 6-6%27/%3e%3c/svg%3e");
+}
+.form-control,.form-select{
+  font-size: 0.75rem !important;
+  font-family: 'Roboto Light';
+}
+.form-control:focus{
+  box-shadow: none !important;
+}
+.mt25r{
+  margin-top:2.5rem !important;
+}
