--- a/src/index.css
+++ b/src/index.css
@@ -331,6 +331,20 @@ h6{
   background-color: #f6f9ff;
   padding: 15px;
 }
+.form-switch .form-check-input{
+padding:10px 24px;
+}
+.form-switch .form-check-label{
+  margin-left:10px;
+  margin-top: 6px;
+  font-weight: 600;
+  }
+  .was-validated .form-switch .form-check-input:valid:checked{
+    background-image: url("data:image/svg+xml,%3csvg xmlns=%27http://www.w3.org/2000/svg%27 viewBox=%27-4 -4 8 8%27%3e%3ccircle r=%272%27 fill=%27%23fff%27/%3e%3c/svg%3e");
+  }
+  .was-validated .form-switch  .form-check-input:valid{
+    background-image: url("data:image/svg+xml,%3csvg xmlns=%27http://www.w3.org/2000/svg%27 viewBox=%27-4 -4 8 8%27%3e%3ccircle r=%273%27 fill=%27rgba%280, 0, 0, 0.25%29%27/%3e%3c/svg%3e");
+  }
 /* .filtergroup .col{
   padding: 0px 5px;
 } */
