--- a/src/index.css
+++ b/src/index.css
@@ -345,6 +345,37 @@ padding:10px 24px;
   .was-validated .form-switch  .form-check-input:valid{
     background-image: url("data:image/svg+xml,%3csvg xmlns=%27http://www.w3.org/2000/svg%27 viewBox=%27-4 -4 8 8%27%3e%3ccircle r=%273%27 fill=%27rgba%280, 0, 0, 0.25%29%27/%3e%3c/svg%3e");
   }
+  .dashboard .card{
+    box-shadow: 0rem 0rem 0.11rem 0.11rem #1e40afb0;
+    color: #1e40af;
+    /* border: 1px solid #1e40afb0; */
+  }
+  .dashboard .card .device{
+    font-size: 1rem;
+    font-weight: 600;
+  }
+  .dashboard .card .parameter span{
+    font-size: 0.875rem;
+    font-weight: 600;
+  }
+  .dashboard .card .icons,.dashboard .card .parameter i{
+    font-size: 1rem;
+  }
+  .dashboard .card .values .btn1{
+    border: 2px solid #1e40af !important;
+    border-radius: 4px;
+    color: #1e40af !important;
+    background-color: #fff;
+    pointer-events: none;
+  }
+  .dashboard .card .values .btn2{
+    border: 2px solid #1e40af !important;
+    border-radius: 4px;
+    color: #fff !important;
+    background-color: #1e40af;
+    pointer-events: none;
+    width: 4rem;
+  }
 /* .filtergroup .col{
   padding: 0px 5px;
 } */
