--- a/src/style.css
+++ b/src/style.css
@@ -1383,3 +1383,6 @@ background-image:url("data:image/svg+xml,%3csvg xmlns=%27http://www.w3.org/2000/
 .mt25r{
   margin-top:2.5rem !important;
 }
+tr.highlight td.jsgrid-cell {
+  background-color: green;
+}
