--- a/src/index.css
+++ b/src/index.css
@@ -570,3 +570,11 @@ tr.highlight td.jsgrid-cell {
 .jexcel .highlight, .jexcel .highlight-selected {
   background-color: #0dcaf075;
 }
+.updated{
+  background-color: green !important;
+  color: #fff;
+}
+/* .jexcel_row, .jexcel_selectall{
+ width: 10px;
+ display: block;
+} */
