--- a/src/style.css
+++ b/src/style.css
@@ -1383,3 +1383,18 @@ background-image:url("data:image/svg+xml,%3csvg xmlns=%27http://www.w3.org/2000/
 .mt25r{
   margin-top:2.5rem !important;
 }
+
+.loader {
+  display : none;
+  position: absolute;
+  left: 50%;
+  border: 8px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 8px solid #3498db;
+  width: 40px;
+  height: 40px;
+  -webkit-animation: spin 2s linear infinite; /* Safari */
+  animation: spin 2s linear infinite;
+}
+
+
