--- a/src/index.css
+++ b/src/index.css
@@ -353,8 +353,8 @@ h6 {
 }
 
 .dashboard .card {
-  box-shadow: 0rem 0rem 0.11rem 0.11rem #5f9ea0;
-  color: #5f9ea0;
+  box-shadow: 0rem 0rem 0.11rem 0.11rem #1e40afb0;
+  color: #1e40afb0;
   margin-bottom: 0.5rem;
   padding-bottom: 0px !important;
   height: 97%;
@@ -366,7 +366,7 @@ h6 {
 } */
 
 .dashboard .card .device {
-  font-size: 1rem;
+  font-size: 1.2rem;
   font-weight: 600;
 }
 .dashboard .card .parameter{
@@ -389,18 +389,23 @@ h6 {
 }
 
 .dashboard .card .values .btn1 {
-  border: 2px solid #5f9ea0 !important;
+  border: 2px solid #1e40afb0 !important;
   border-radius: 4px;
-  color: #5f9ea0 !important;
+  color: #1e40afb0 !important;
   background-color: #fff;
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 0px;
   /*  pointer-events: none; */
 }
 
 .dashboard .card .values .btn2 {
-  border: 2px solid #5f9ea0 !important;
+  border: 2px solid #1e40afb0 !important;
+  border-left: none !important;
   border-radius: 4px;
   color: #fff !important;
-  background-color: #5f9ea0;
+  background-color: #1e40afb0;
+  border-top-left-radius: 0px;
+  border-bottom-left-radius: 0px;
   pointer-events: none;
   width: 4rem;
 }
@@ -424,14 +429,14 @@ h6 {
 .dashboard_row::-webkit-scrollbar {
   height: 8px;
   width: 4px;
-  border: 1px solid #5f9ea0;
+  border: 1px solid #1e40afb0;
   border-radius: 5px;
 }
 
 .dashboard_row::-webkit-scrollbar-thumb {
   border-radius: 5px;
-  -webkit-box-shadow: inset 0 0 6px #5f9ea0;
-  box-shadow: inset 0 0 6px #5f9ea0;
+  -webkit-box-shadow: inset 0 0 6px #1e40afb0;
+  box-shadow: inset 0 0 6px #1e40afb0;
 }
 
 .modal.fade.zoom:not(.show) .modal-dialog {
