--- a/src/index.css
+++ b/src/index.css
@@ -320,6 +320,10 @@ table.table .avatar {
   color: #dddddd87 !important;
 }
 
+.sequencedisable {
+  pointer-events: none;
+}
+
 .disable i {
   color: #dddddd87 !important;
 }
@@ -748,4 +752,5 @@ table.jexcel colgroup col:nth-child(1) {
   font-size: 0.855rem !important;
   font-weight: 600;
 }
+
 
