--- a/src/index.css
+++ b/src/index.css
@@ -410,6 +410,8 @@ h6 {
   background-color: #fff;
   border-top-right-radius: 0px;
   border-bottom-right-radius: 0px;
+  height: 1.58rem;
+  vertical-align: middle;
   /*  pointer-events: none; */
 }
 
@@ -424,6 +426,8 @@ h6 {
   border-bottom-left-radius: 0px;
   pointer-events: none;
   width: 4rem;
+  height: 1.58rem;
+  vertical-align: middle;
 }
 
 .dashboard_row {
