--- a/public/css/sumoselect.css
+++ b/public/css/sumoselect.css
@@ -42,6 +42,8 @@
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     border-radius: 5px;
+    font-size: 13px;
+    letter-spacing: 0.5px;
 }
 
 .SumoSelect.open > .search > span, .SumoSelect.open > .search > label {
@@ -251,6 +253,8 @@
         overflow: hidden;
         display: block;
         cursor: pointer;
+        letter-spacing: 0.5px;
+        font-size: 13px;
     }
 
     .SumoSelect > .optWrapper > .options li span {
@@ -418,6 +422,8 @@
         padding: 8px 0 3px 35px;
        /*  height: 20px; */
         cursor: pointer;
+        font-size: 13px;
+        letter-spacing: 0.5px;
     }
 
         .SumoSelect .select-all > label, .SumoSelect .select-all > span i {
