--- a/src/style.css
+++ b/src/style.css
@@ -1458,5 +1458,7 @@ background-image:url("data:image/svg+xml,%3csvg xmlns=%27http://www.w3.org/2000/
 .react-datepicker {
   font-family: 'Roboto Light'!important;
   font-size: 11px!important;
-
+}
+.cursor_pointer{
+  cursor: pointer !important;
 }
