--- a/src/index.css
+++ b/src/index.css
@@ -768,6 +768,25 @@ table.jexcel colgroup col:nth-child(1) {
   font-weight: bold;
   color: #fff;
   font-size: 20px;
+  z-index: inherit;
+}
+.header_logodiv{
+  z-index: inherit; 
+}
+.scrolling-text {
+  white-space: nowrap;
+  overflow: hidden;
+  animation: scroll 10s linear infinite;
+  color: orange;
+  font-weight: bold;
+  font-size: 1.25rem;
 }
 
-
+@keyframes scroll {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
