--- a/src/style.css
+++ b/src/style.css
@@ -1462,3 +1462,14 @@ background-image:url("data:image/svg+xml,%3csvg xmlns=%27http://www.w3.org/2000/
 .cursor_pointer{
   cursor: pointer !important;
 }
+
+.jsgrid .jsgrid-button_custom {
+  width: 16px;
+  height: 16px;
+  border: none;
+  cursor: pointer;
+  margin-right: 10px;
+  background-repeat: no-repeat;
+  background-color: transparent;
+  font-size: 1rem;
+}
